add: support for bunch of core wayland interfaces
    Added support for:
    + `wl_subcompositor`
    + `wl_subsurface`
    + `wl_region`
    + `wl_pointer`
    + `wl_seat`
    Also improved xdg-shell handling by moving the surface role up to `xdg_surface_t`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,9 @@ set(barock_SOURCES
   src/core/surface.cpp
   src/core/shm.cpp
   src/core/shm_pool.cpp
+  src/core/region.cpp
+  src/core/wl_subcompositor.cpp
+  src/core/wl_seat.cpp
 
   # dmabuf
   src/dmabuf/dmabuf.cpp
