--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ target_compile_options(barock PRIVATE "-std=c++23")
 target_compile_options(barock PRIVATE "-fsanitize=address")
 target_compile_options(barock PRIVATE "-Og" "-g3")
 target_compile_options(barock PRIVATE "-Werror=implicit-fallthrough")
+
 target_link_options(barock PRIVATE "-fsanitize=address")
 target_link_libraries(barock PUBLIC m)
 
@@ -51,6 +52,7 @@ set(barock_SOURCES
 
 target_include_directories(barock PUBLIC "include/")
 
+set(MINIDRM_EGL On)
 add_subdirectory(include/drm)
 
 target_sources(barock
