add: extensions to enable panning implemented solely in janet
    With `input/key-held', `remove-hook', and `mouse-button-hook', it
     is now possible to implement workspace panning solely inside
     Janet.

    I'm uncertain about the future of this approach, it does blend in
     nicely with the vision I have for this compositor, but then
     again, workspace panning feels like such a fundamental feature,
     that implementing this inside the scripting support feels dirty.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,7 @@ set(barock_SOURCES
   src/script/output.cpp
   src/script/xdg_shell.cpp
   src/script/hotkey.cpp
+  src/script/cursor.cpp
 
   # dmabuf
   src/dmabuf/dmabuf.cpp
